# silk

./: .gitignore  CMakeLists.txt
geoweb/: CMakeLists.txt
geoweb/applets/: CMakeLists.txt
geoweb/applets/helloPlugin/: CMakeLists.txt  plasma-applet-geoweb-hello.desktop  plasma-geoweb-hello.cpp  plasma-geoweb-hello.h
geoweb/applets/location/: CMakeLists.txt  geocodehandler.cpp  geocodehandler.h  locationConf.ui  plasma-applet-geoweb-location.desktop  plasma-geoweb-location.cpp  plasma-geoweb-location.h
geoweb/applets/openstreetmap/: CMakeLists.txt  plasma-applet-geoweb-openstreetmap.desktop  plasma-geoweb-openstreetmap.cpp  plasma-geoweb-openstreetmap.h
geoweb/applets/openstreetmap-map/: CMakeLists.txt  plasma-applet-geoweb-openstreetmap-map.desktop  plasma-geoweb-openstreetmap-map.cpp  plasma-geoweb-openstreetmap-map.h
geoweb/dataengine/: CMakeLists.txt  geoloc.cpp  geoloc.h  geoweb.cpp  geoweb.h  geoweb.kcfg  plasma-engine-geoweb.desktop  provider.cpp  provider.h  settings.kcfgc
librest/: CMakeLists.txt  librest.cpp  librest.h  librest.pro
librest/example/identi/: CMakeLists.txt
mediawiki/: .gitignore  CMakeLists.txt  general.h  login.cpp  login.h  mediawiki.cpp  mediawiki.h  usergroups.cpp  usergroups.h
mediawiki/kipi-plugin/: CMakeLists.txt  kipiplugin_wikimedia.desktop  mwwindow.cpp  mwwindow.h  plugin_wikimedia.cpp  plugin_wikimedia.h  wikimediajob.cpp  wikimediajob.h  wmlogin.cpp  wmlogin.h  wmwidget.cpp  wmwidget.h  wmwindow.cpp  wmwindow.h  wmwindow.ui
mediawiki/libmediawiki/: AUTHORS  CMakeLists.txt  CTestConfig.cmake  LibMediaWikiNightly.cmake  edit.cpp  edit.h  general.cpp  general.h  generalinfo.cpp  generalinfo.h  image.cpp  image.h  imageinfo.cpp  imageinfo.h  job.cpp  job.h  job_p.h  libmediawiki.lsm.cmake  libmediawiki.pc.cmake  login.cpp  login.h  logout.cpp  logout.h  mediawiki.cpp  mediawiki.h  mediawiki_export.h  mediawiki_p.h  mediawikijob.cpp  mediawikijob.h  mediawikijob_p.h  page.cpp  page.h  parse.cpp  parse.h  parser.cpp  parser.h  protection.cpp  protection.h  queryimageinfo.cpp  queryimageinfo.h  (+18 more)
mediawiki/libmediawiki/libmediawiki/: CMakeLists.txt  image.cpp  parse.cpp  queryimageinfo.cpp  queryimages.h  revision.cpp
mediawiki/libmediawiki/samplecode/: CMakeLists.txt
mediawiki/libmediawiki/tests/: CMakeLists.txt  edittest.cpp  generaltest.cpp  logintest.cpp  logouttest.cpp  mediawikijobtest.cpp  mediawikitest.cpp  parsetest.cpp  queryimageinfotest.cpp  queryimagestest.cpp  queryinfotest.cpp  queryrevisiontest.cpp  queryrevisiontest_parsetree.rc  querysiteinfogeneraltest.cpp  querysiteinfousergroupstest.cpp  test_general.cpp  test_login.cpp  test_mediawiki.cpp  test_usergroups.cpp  uploadtest.cpp  usergroupstest.cpp
mediawiki/mediawiki/: wikimediajob.cpp
mediawiki/plasmoid/: CMakeLists.txt
mediawiki/plasmoid/applet/: CMakeLists.txt
mediawiki/plasmoid/engine/: CMakeLists.txt
mediawiki/plasmoid/pictureoftheday/: CMakeLists.txt  picture.h  pictureoftheday.cpp  pictureoftheday.h  plasma-applet-pictureoftheday.desktop  plasmapictureoftheday.cpp  plasmapictureoftheday.h
mediawiki/samplecode/: CMakeLists.txt
mediawiki/samplecode/editsample/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
mediawiki/samplecode/uploadsample/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
mediawiki/test/: CMakeLists.txt  test_general.cpp  test_usergroups.cpp
mediawiki/test/fake_server/: .directory  server.cpp  server.h
mediawiki/test/login/: CMakeLists.txt  test_login.cpp  test_login.h
mediawiki/tests/: CMakeLists.txt  test_general.cpp  test_login.cpp  test_usergroups.cpp
selkie/selkie/services/: CMakeLists.txt  silk-webapp-action.desktop  silk-webapp.desktop
selkie/selkie/src/: .gitignore  CMakeLists.txt  main.cpp  page.cpp  page.h  scriptapi.cpp  selkie.cpp  selkie.notifyrc  view.cpp  view.h  webapp.cpp  webapp.h  webappaction.cpp  webappaction.h  webappwidget.cpp  webappwidget.h
selkie/services/test/: CMakeLists.txt  scalediv.js  silk-webapp-test-editor.desktop  silk-webapp-test-glob.desktop  silk-webapp-test-toolbar.desktop  silk-webapp-test-trigger.desktop  silk-webapp-test-wildcard.desktop  silk-webapp-test.desktop  togglechrome.js  toolbaraction.js  triggeraction.js
sitespecificbrowser/: .gitignore  CMakeLists.txt  README  greasemonkeyscript.cpp  main.cpp  page.cpp  page.h  scriptapi.cpp  scriptapi.h  silk-webapp.desktop  sitespecificbrowser-gmail.desktop  sitespecificbrowser.desktop  sitespecificbrowser.pro  toplevel.cpp  toplevel.h  view.cpp  view.h  webappaction.cpp  webappaction.h
sitespecificbrowser/icons/: WebpageIcons.db
sitespecificbrowser/services/: CMakeLists.txt  silk-webapp-action.desktop
sitespecificbrowser/services/buienradar/: CMakeLists.txt  sitespecificbrowser-buienradar.desktop
sitespecificbrowser/src/: CMakeLists.txt  greasemonkeyscript.cpp  main.cpp  page.cpp  page.h  scriptapi.cpp  settings.kcfgc  sitespecificbrowser.kcfg  sitespecificbrowserui.rc  view.cpp  view.h  webapp.cpp  webapp.h  webappaction.cpp  webappaction.h
sitespecificbrowser/tests/: test_greasemonkeyscript.cpp
webappeditor/src/: CMakeLists.txt  Messages.sh  main.cpp  selkieeditor.cpp  selkieeditor.h  selkiepackagestructure.cpp  selkiepackagestructure.h  webapp.ui  webappaction.ui  webappactioneditor.cpp  webappactioneditor.h  webappeditor.cpp  webappeditor.h  webappeditor.kcfg  webappeditorui.rc  webappeditorview.cpp  webappeditorview.h  webappeditorview_base.ui
webslicer2/: CMakeLists.txt  slicegraphicswidget.cpp  slicegraphicswidget.h  slicewidget.cpp  slicewidget.h  webslicer2.pro
webslicer2/plasma/: CMakeLists.txt  plasma-applet-webslice.desktop  webslice.cpp  webslice.h  websliceConfig.ui
webwelcome/: .directory  CMakeLists.txt  Messages.sh  README.txt  applet.cpp  applet.h  dialog.cpp  dialog.h  plasma-applet-webwelcome.desktop  servicebutton.cpp  servicebutton.h  servicecontainer.cpp  servicecontainer.h  stylesheet.cpp  stylesheet.h
webwelcome/images/: .directory
webwelcome/services/: CMakeLists.txt  news-add.js  news.cpp  news.h  twitter.cpp  twitter.h  webservice.desktop
(+228 files in other folders)
