if(NOT ENABLE_APPLETS)
    return()
endif(NOT ENABLE_APPLETS)

if(ENABLE_LOCATION_APPLET)
    add_subdirectory(location)
endif(ENABLE_LOCATION_APPLET)

if(ENABLE_HELLO_PLUGIN AND ENABLE_HELLO_APPLET)
    add_subdirectory(helloPlugin)
endif(ENABLE_HELLO_PLUGIN AND ENABLE_HELLO_APPLET)

if(ENABLE_OPENSTREETMAP_PLUGIN AND ENABLE_OPENSTREETMAP_APPLET)
    add_subdirectory(openstreetmap)
endif(ENABLE_OPENSTREETMAP_PLUGIN AND ENABLE_OPENSTREETMAP_APPLET)

if(ENABLE_OPENSTREETMAP-MAP_APPLET)
    add_subdirectory(openstreetmap-map)
endif(ENABLE_OPENSTREETMAP-MAP_APPLET)