
install(FILES silk-webapp.desktop DESTINATION ${SERVICETYPES_INSTALL_DIR})
install(FILES silk-webapp-action.desktop DESTINATION ${SERVICETYPES_INSTALL_DIR})

# Moved to new format ...
#add_subdirectory(reviewboard)
#add_subdirectory(gmail)
#add_subdirectory(silk)

# not ported yet ...
#add_subdirectory(buienradar)
#add_subdirectory(formula1timing)
#add_subdirectory(planetkde)
#add_subdirectory(test)
